Upgrading JAXB to remove illegal reflective access issues (aligns it with geotools/geoserver